[gd_scene load_steps=2 format=3 uid="uid://xery8lugsak3"]

[ext_resource type="Script" path="res://password_confirmation_dialog.gd" id="1_tvumu"]

[node name="PasswordConfirmationDialog" type="Window"]
initial_position = 2
size = Vector2i(253, 131)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_tvumu")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Please confirm your Password"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="LineEdit_password" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
alignment = 1
clear_button_enabled = true
secret = true

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button_ok" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "OK"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button_cancle" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Cancle"

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/LineEdit_password" to="." method="_on_line_edit_password_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button_ok" to="." method="_on_button_ok_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Button_cancle" to="." method="_on_button_cancle_pressed"]
